managed to do rotation logic, made it more user friendly with better text visibility and with onboarding. fixed pot bug and also added mobile responsiveness (though not perfect)

--- a/gameStyle.css
+++ b/gameStyle.css
@@ -1,7 +1,5 @@
 #gameContainer {
     position: relative;
-    width: 1200px;
-    height: 600px;
     margin: auto;
     top: 50%;
     transform: translateY(-50%);
@@ -9,6 +7,8 @@
     border-radius: 12px;
     z-index: 1000;
     overflow: hidden;
+    max-width: 1200px;
+    max-height: 600px;
 }
 
 #gameContainer canvas {
